add /users/deactivate
